# deadline-cloud-samples

./: .gitattributes  .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
conda_recipes/: README.md  submit-package-job
conda_recipes/blender-4.0/: recipe_vars.sh
conda_recipes/blender-4.0/blender-4.0/: meta.yaml
conda_recipes/blender-4.1/: recipe_vars.sh
conda_recipes/blender-4.1/blender-4.1/: build.sh  (+1 more)
conda_recipes/build_linux_package/: parameter_values.yaml  template.yaml
job_bundles/: README.md
job_bundles/afterfx_render_one_task/: README.md  template.yaml
job_bundles/blender_render/: template.yaml
job_bundles/cli_job/: template.yaml
job_bundles/copy_s3_prefix_to_job_attachments/: README.md  parameter_values.yaml  template.yaml
job_bundles/gui_control_showcase/: template.yaml
job_bundles/job_dev_progression/: README.md
job_bundles/job_dev_progression/stage_4_bundled_python_package/progression_4_lib/: README.md  hatch.toml  pyproject.toml  requirements-testing.txt
job_bundles/job_dev_progression/stage_4_bundled_python_package/progression_4_lib/src/progression_4_lib/: initialize.py  process.py  standard_args.py
job_bundles/job_dev_progression/stage_4_bundled_python_package/progression_4_lib/test/progression_4_lib/: test_add_standard_args.py
job_bundles/maya_wrench_sample/: .gitattributes  Readme.txt  template.yaml  wrench.ma
job_bundles/simple_job/: template.yaml
queue_environments/: README.md  conda_queue_env_console_equivalent.yaml  conda_queue_env_from_console.yaml  conda_queue_env_improved_caching.yaml  rez_queue_env.yaml
(+31 files in other folders)
